php-src/ext/spl/tests/bug71204.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught Error: Class 'A' not found in /root/php-src/ext/spl/tests/bug71204.php:10
Stack trace:
#0 {main}
  thrown in /root/php-src/ext/spl/tests/bug71204.php on line 10